--- a/examples/pipelines/gae/config.yaml
+++ b/examples/pipelines/gae/config.yaml
@@ -19,7 +19,7 @@ WIKI:
         act_last: false
     train:
         seed: -1
-        rounds: 1
+        rounds: 10
         max_epoch: 30
         lr: 1e-3
     visualize:
@@ -28,6 +28,48 @@ WIKI:
         heatmap: true
         loss: true
         dir: ./visualization/WIKI/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+CORA:
+    device: cuda
+    logger:
+        name: CORA
+        mode: both
+        dir: ./log/CORA/
+    dataset:
+        dir: ../data/CORA/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CORA/
         when: end
     evaluate:
         each: false
@@ -61,7 +103,7 @@ ACM:
         act_last: false
     train:
         seed: -1
-        rounds: 1
+        rounds: 10
         max_epoch: 30
         lr: 1e-3
     visualize:
@@ -122,46 +164,8 @@ CITE:
         hom: true
         com: true
         pur: true
-CORA:
-    device: cuda
-    logger:
-        name: CORA
-        mode: both
-        dir: ./log/CORA/
-    dataset:
-        dir: ../data/CORA/
-        augmentation:
-            add_self_loops: true
-            drop_edge: 0.0
-            drop_feature: 0.0
-            add_edge: 0.0
-            add_noise: 0.0
-    model:
-        gnn_type: gcn
-        dims: [ 256, 16 ]
-        act: relu
-        act_last: false
-    train:
-        seed: -1
-        rounds: 10
-        max_epoch: 30
-        lr: 1e-3
-    visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
-        dir: ./visualization/CORA/
-        when: end
-    evaluate:
-        each: false
-        acc: true
-        nmi: true
-        ari: true
-        f1: true
-        hom: true
-        com: true
-        pur: true
+        sc: true
+        gre: true
 DBLP:
     device: cuda
     logger:
@@ -182,7 +186,7 @@ DBLP:
         act: relu
         act_last: false
     train:
-        seed: 0
+        seed: -1
         rounds: 10
         max_epoch: 30
         lr: 1e-3
@@ -202,3 +206,299 @@ DBLP:
         hom: true
         com: true
         pur: true
+        sc: true
+        gre: true
+PUBMED:
+    device: cuda
+    logger:
+        name: PUBMED
+        mode: both
+        dir: ./log/PUBMED/
+    dataset:
+        dir: ../data/PUBMED/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/PUBMED/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ARXIV:
+    device: cuda
+    logger:
+        name: ARXIV
+        mode: both
+        dir: ./log/ARXIV/
+    dataset:
+        dir: ../data/ARXIV/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ARXIV/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+BLOG:
+    device: cuda
+    logger:
+        name: BLOG
+        mode: both
+        dir: ./log/BLOG/
+    dataset:
+        dir: ../data/BLOG/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/BLOG/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+FLICKR:
+    device: cuda
+    logger:
+        name: FLICKR
+        mode: both
+        dir: ./log/FLICKR/
+    dataset:
+        dir: ../data/FLICKR/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/FLICKR/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ROMAN:
+    device: cuda
+    logger:
+        name: ROMAN
+        mode: both
+        dir: ./log/ROMAN/
+    dataset:
+        dir: ../data/ROMAN/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ROMAN/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+USPS_3:
+    device: cuda
+    logger:
+        name: USPS_3
+        mode: both
+        dir: ./log/USPS_3/
+    dataset:
+        dir: ../data/USPS_3/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/USPS_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+HHAR_3:
+    device: cuda
+    logger:
+        name: HHAR_3
+        mode: both
+        dir: ./log/HHAR_3/
+    dataset:
+        dir: ../data/HHAR_3/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 30
+        lr: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/HHAR_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
