--- a/examples/pipelines/gae_ssc/config.yaml
+++ b/examples/pipelines/gae_ssc/config.yaml
@@ -1,58 +1,11 @@
-ACM:
+WIKI:
     device: cuda
     logger:
-        name: ACM
+        name: WIKI
         mode: both
-        dir: ./log/ACM/
+        dir: ./log/WIKI/
     dataset:
-        dir: ../data/ACM/
-        augmentation:
-            add_self_loops: true
-            drop_edge: 0.0
-            drop_feature: 0.0
-            add_edge: 0.0
-            add_noise: 0.0
-    model:
-        gnn_type: gcn
-        dims: [ 256, 16 ]
-        act: relu
-        act_last: false
-    train:
-        pretrain:
-            seed: 0
-            rounds: 1
-            dir: ./pretrain/ACM/
-            max_epoch: 30
-            lr: 1e-3
-        seed: 0
-        rounds: 1
-        max_epoch: 20
-        lr: 1e-3
-        alpha: 1e-3
-    visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
-        dir: ./visualization/ACM/
-        when: end
-    evaluate:
-        each: true
-        acc: true
-        nmi: true
-        ari: true
-        f1: true
-        hom: true
-        com: true
-        pur: true
-CITE:
-    device: cuda
-    logger:
-        name: CITE
-        mode: both
-        dir: ./log/CITE/
-    dataset:
-        dir: ../data/CITE/
+        dir: ../data/WIKI/
         augmentation:
             add_self_loops: true
             drop_edge: 0.0
@@ -68,21 +21,21 @@ CITE:
         pretrain:
             seed: -1
             rounds: 1
-            dir: ./pretrain/CITE/
-            max_epoch: 50
+            dir: ./pretrain/WIKI/
+            max_epoch: 30
             lr: 1e-3
-            weight_decay: 5e-3
         seed: -1
         rounds: 10
-        max_epoch: 50
+        max_epoch: 20
         lr: 1e-3
-        weight_decay: 5e-3
-        alpha: 10
+        alpha: 1e-3
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/WIKI/
+        when: end
     evaluate:
         each: false
         acc: true
@@ -92,6 +45,8 @@ CITE:
         hom: true
         com: true
         pur: true
+        sc: true
+        gre: true
 CORA:
     device: cuda
     logger:
@@ -116,20 +71,20 @@ CORA:
             seed: -1
             rounds: 1
             dir: ./pretrain/CORA/
-            max_epoch: 50
+            max_epoch: 30
             lr: 1e-3
-            weight_decay: 5e-3
         seed: -1
         rounds: 10
-        max_epoch: 50
+        max_epoch: 20
         lr: 1e-3
-        weight_decay: 5e-3
-        alpha: 10
+        alpha: 1e-3
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CORA/
+        when: end
     evaluate:
         each: false
         acc: true
@@ -139,6 +94,106 @@ CORA:
         hom: true
         com: true
         pur: true
+        sc: true
+        gre: true
+ACM:
+    device: cuda
+    logger:
+        name: ACM
+        mode: both
+        dir: ./log/ACM/
+    dataset:
+        dir: ../data/ACM/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/ACM/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ACM/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+CITE:
+    device: cuda
+    logger:
+        name: CITE
+        mode: both
+        dir: ./log/CITE/
+    dataset:
+        dir: ../data/CITE/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/CITE/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CITE/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
 DBLP:
     device: cuda
     logger:
@@ -163,20 +218,20 @@ DBLP:
             seed: -1
             rounds: 1
             dir: ./pretrain/DBLP/
-            max_epoch: 50
+            max_epoch: 30
             lr: 1e-3
-            weight_decay: 5e-3
         seed: -1
         rounds: 10
-        max_epoch: 50
+        max_epoch: 20
         lr: 1e-3
-        weight_decay: 5e-3
-        alpha: 10
+        alpha: 1e-3
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/DBLP/
+        when: end
     evaluate:
         each: false
         acc: true
@@ -186,3 +241,348 @@ DBLP:
         hom: true
         com: true
         pur: true
+        sc: true
+        gre: true
+PUBMED:
+    device: cuda
+    logger:
+        name: PUBMED
+        mode: both
+        dir: ./log/PUBMED/
+    dataset:
+        dir: ../data/PUBMED/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/PUBMED/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/PUBMED/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ARXIV:
+    device: cuda
+    logger:
+        name: ARXIV
+        mode: both
+        dir: ./log/ARXIV/
+    dataset:
+        dir: ../data/ARXIV/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/ARXIV/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ARXIV/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+BLOG:
+    device: cuda
+    logger:
+        name: BLOG
+        mode: both
+        dir: ./log/BLOG/
+    dataset:
+        dir: ../data/BLOG/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/BLOG/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/BLOG/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+FLICKR:
+    device: cuda
+    logger:
+        name: FLICKR
+        mode: both
+        dir: ./log/FLICKR/
+    dataset:
+        dir: ../data/FLICKR/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/FLICKR/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/FLICKR/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ROMAN:
+    device: cuda
+    logger:
+        name: ROMAN
+        mode: both
+        dir: ./log/ROMAN/
+    dataset:
+        dir: ../data/ROMAN/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/ROMAN/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ROMAN/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+USPS_3:
+    device: cuda
+    logger:
+        name: USPS_3
+        mode: both
+        dir: ./log/USPS_3/
+    dataset:
+        dir: ../data/USPS_3/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/USPS_3/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/USPS_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+HHAR_3:
+    device: cuda
+    logger:
+        name: HHAR_3
+        mode: both
+        dir: ./log/HHAR_3/
+    dataset:
+        dir: ../data/HHAR_3/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 16 ]
+        act: relu
+        act_last: false
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/HHAR_3/
+            max_epoch: 30
+            lr: 1e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 20
+        lr: 1e-3
+        alpha: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/HHAR_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
